# EminenceProver

./: .gitmodules  CMakeLists.txt  Doxyfile  EminenceProver_8hpp_source.html  Formula_8hpp_source.html  Problem_8hpp_source.html  README.md  Term_8hpp_source.html  VampireSubprocessProver_8hpp_source.html  annotated.html  classes.html  dir_49cc6817093df1463ad9037c5c5c7d6e.html  dir_518553b2db197c2232f4a69194dc362a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a407f8d09d0f5a98bc1af44488d0bcbd.html  dir_a6f28444aa93ec6b1538c13ca6abd4e5.html  edge-example.html  examples.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  group__Inner.html  group__Internal.html  if-example.html  index.html  menudata.js  modules.html  namespaceProver.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacevamp.html  numrozek.p  ozFail.p  pages.html  structFormula-members.html  structFormula.html  (+26 more)
.github/workflows/: buildAndTest.yml  publishDocs.yml
garden/: CMakeLists.txt
problems/naveen/: completeness.clj  soundness.clj
problems/tptp/: ozConsistCS.p  ozConsistFail.p  ozEquiv.p  ozFail.p  ozParseError.p  ozTauto.p  rozConsist.p  rozConsistCS.p  rozConsistFail.p
proofs/tptp/: ozFail.p
scripts/: README.md  addSubmodules.sh  depGraph.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+23 more)
src/: CMakeLists.txt  Formula.cpp  Formula.hpp  FormulaTest.cpp  Object.cpp  Object.hpp
src/Eminence/: CMakeLists.txt  DCECExpanders.cpp  EminenceProver.cpp  EminenceProver.hpp  Expanders.cpp  Expanders.hpp  README.md  VampireSubprocessProver.cpp  VampireSubprocessProver.hpp
src/Formula/: CMakeLists.txt  Formula.cpp  Formula.hpp  FormulaBuilders.cpp  FormulaTest.cpp  Object.cpp  Object.hpp  Predicate.cpp  Term.cpp  Term.hpp
src/FormulaIO/: CMakeLists.txt  SExpression.cpp  SExpression.hpp  readers.cpp  readers.hpp  writers.cpp  writers.hpp
src/Grammar/: SExpr.cf
src/Grammar/SExpr/: Absyn.H  SExpr.l  Skeleton.C  Test.C
src/Problem/: CMakeLists.txt  Problem.cpp  Problem.hpp
src/Question/: CMakeLists.txt  Question.cpp  Question.hpp
test/: CMakeLists.txt  FormulaTest.cpp  VampireSubprocessProverTest.cpp
trash/src/: CMakeLists.txt
trash/src/Grammar/: CMakeLists.txt  ShadowProblem.cf
trash/src/Grammar/SExpr/: Absyn.C  Parser.H  Printer.C  Printer.H  SExpr.y  Skeleton.H
